footer components, update from ocha_basic, mainly to remove border bottom and replace with underlines on links, and alignment fixes

--- a/sass/cd/cd-footer/_cd-mandate.scss
+++ b/sass/cd/cd-footer/_cd-mandate.scss
@@ -15,17 +15,16 @@
   width: 149px;
   height: 37px;
   margin: 0 auto 16px;
-  background: url('../img/logos/ocha-lockup-white.svg') 0 center no-repeat;
+  background: url('../img/logos/ocha-lockup.svg') 0 center no-repeat;
 
-  // this doesn't work since we don't have modernizr.
   .no-svg & {
-    background: url('../img/logos/ocha-lockup-white@149x37.png') 0 center no-repeat;
+    background: url('../img/logos/ocha-lockup@149x37.png') 0 center no-repeat;
   }
 
   @include desktop {
     box-sizing: content-box;
     float: left;
-    margin: -4px $cd-container-padding 1rem auto;
+    margin: -4px $cd-container-padding 0 auto;
     padding-right: $cd-container-padding;
     border-right: 1px solid $cd-border-color;
   }
@@ -51,6 +50,7 @@
   @include desktop {
     text-align: left;
     padding: 0;
+    padding-left: 173px; // Width of logo.
     padding-right: $cd-container-padding-xlarge;
     margin: 0;
     max-width: 100%;
